2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JList/AccessibleJList/AccessibleJListChild/getFont.java
	(test): Changed getBackground() --> getFont().

2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/UIManager/addPropertyChangeListener.java
	(test): Don't assume there are zero listeners at start of test,
	* gnu/testlet/javax/swing/UIManager/getPropertyChangeListeners.java
	(test): Likewise.

2006-01-29  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto/mac/TestOfHMacCloneability.java: New file.
	* gnu/testlet/javax/crypto/jce/TestOfMac.java (testEquality): Skip OMAC
	with null cipher.
	Use two MDGenerators directly instantiated.
	(testCloneability): Use a directly instantiaed MDGenerator.

2006-01-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	(testMinimumViewSize): New test.

2006-01-28  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto/sasl/TestOfClientFactory.java: New file.
	* gnu/testlet/javax/crypto/sasl/TestOfServerFactory.java: Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPAuthInfoProvider.java:
	  Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPPasswordFile.java: Likewise.
	* gnu/testlet/javax/crypto/sasl/srp/TestOfSRPPrimitives.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfARCFour.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfICMGenerator.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfPBKDF2.java: Likewise.
	* gnu/testlet/javax/crypto/prng/TestOfPRNGFactory.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfPadFactory.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfPKCS7.java: Likewise.
	* gnu/testlet/javax/crypto/pad/TestOfTBC.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfCBC.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfCFB.java: Likewise.
	* gnu/testlet/javax/crypto/mode/TestOfEAX.java: Likewise.