@@ -13,9 +13,9 @@
 // GNU General Public License for more details.
 
 // You should have received a copy of the GNU General Public License
-// along with Mauve; see the file COPYING.  If not, write to
-// the Free Software Foundation, 59 Temple Place - Suite 330,
-// Boston, MA 02111-1307, USA.  */
+// along with Mauve; see the file COPYING.  If not, write to the
+// Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+// 02110-1301 USA.
 
 package gnu.testlet.javax.swing.event.SwingPropertyChangeSupport;
 
@@ -55,17 +55,15 @@ public class hasListeners implements Testlet, PropertyChangeListener {
     s.removePropertyChangeListener("X", this);
     harness.check(s.hasListeners("X"), false);
     
-    // check null argument
-    boolean pass = false;
-    try
-    {
-      s.hasListeners(null);
-    }
-    catch (NullPointerException e)
-    {
-      pass = true;
-    }
-    harness.check(pass);
+    // check null argument - in 1.5.0 the spec says that this checks for 
+    // listeners registered against all properties
+    harness.check(s.hasListeners(null), false);
+    
+    // add a listener for all events
+    s.addPropertyChangeListener(this);
+    harness.check(s.hasListeners(null));
+    s.removePropertyChangeListener(this);
+    harness.check(s.hasListeners(null), false); 
   }
 
   public void propertyChange(PropertyChangeEvent e)
